--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>JUST CLICK!</h1>
     <section>
         <div></div>
         <div></div>
